Multipling two values in the Transform Tools Number Input not possible. #39312

Closed
opened 2014-03-21 09:46:30 +01:00 by Michael P. · 6 comments

System Information
Windows 7 64bit
NVIDIA GeForce GTX 760

Blender Version
Broken: blender-2.70-windows64-vc2013_preview

Short description of error
Multipling two values in the Transform Tools Number Input not possible.

Exact steps for others to reproduce the error

Issue 1:
I can't type the character * into the "Transform Tools Number Input" (German keyboard).
I doesn't matter if it is the numpad or regular value.

I can activate the Transform Tools Number Input with numpad *
The characters -, /, =, etc. are no problem.
The + character works only form numpad
Copy and paste something like 2*3 or 2**5 works also fine.

Issue 2:
In a regular numbers field I can use the keyboad key | + * ~ | (this is one key please see here
https://en.wikipedia.org/wiki/German_keyboard_layout).

In the "Transform Tools Number Input" it doesn't work at all.

Issue 3:
To many clicks on the CTRL+Tab seems to chages the values:

  • G to move an object. * to activate the tools number input
  • 1 for x, tab, 1 for y, tab, 1 for z
  • now click CTRL+Tab 5 times or more
  • x is now NONE, y is -1/(1) and z is also NONE

Question:
"ctrl to move by block", what does this do exactly?

**System Information** Windows 7 64bit NVIDIA GeForce GTX 760 **Blender Version** Broken: blender-2.70-windows64-vc2013_preview **Short description of error** Multipling two values in the Transform Tools Number Input not possible. **Exact steps for others to reproduce the error** Issue 1: I can't type the character * into the "Transform Tools Number Input" (German keyboard). I doesn't matter if it is the numpad or regular value. I can activate the Transform Tools Number Input with numpad * The characters -, /, =, etc. are no problem. The + character works only form numpad Copy and paste something like 2*3 or 2**5 works also fine. Issue 2: In a regular numbers field I can use the keyboad key | + * ~ | (this is one key please see here https://en.wikipedia.org/wiki/German_keyboard_layout). In the "Transform Tools Number Input" it doesn't work at all. Issue 3: To many clicks on the CTRL+Tab seems to chages the values: - G to move an object. * to activate the tools number input - 1 for x, tab, 1 for y, tab, 1 for z - now click CTRL+Tab 5 times or more - x is now NONE, y is -1/(1) and z is also NONE Question: "ctrl to move by block", what does this do exactly?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Michael P. 2014-03-21 09:46:30 +01:00
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

This issue was referenced by blender/blender-addons-contrib@7148c97796

This issue was referenced by blender/blender-addons-contrib@7148c97796723d9f074bdf5acd244be02c54b814

This issue was referenced by 7148c97796

This issue was referenced by 7148c97796723d9f074bdf5acd244be02c54b814

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7148c97796.

Closed by commit 7148c97796.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39312
No description provided.