Fix T39312 Multipling two values in the Transform Tools Number Input not possible.

There was actually a few bugs in new event handling of numinput :/

In case of 2.70 'a' release, this commit should be considered imho.